@@ -650,6 +650,7 @@ org.openjump.core.ui.plugin.file.open.OpenFileWizard = File
 org.openjump.core.ui.plugin.file.open.OpenProjectWizard = Project
 org.openjump.core.ui.plugin.file.open.OpenProjectWizard.could-not-open-project-file-{0}-with-error-{1} = Loading project file ''{0}'' failed with the error\:\n\
 	\ {1}.
+org.openjump.core.ui.plugin.file.open.OpenProjectWizard.datasource-not-found = DataSource not found for ''{0}''
 org.openjump.core.ui.plugin.file.open.OpenProjectWizard.opening-datasource-{0}-failed-with-error = Opening datasource ''{0}'' failed with error\:
 org.openjump.core.ui.plugin.file.open.OpenProjectWizard.click-yes-to-continue-or-no-to-remove-layer = Click "Yes" to continue or "No" to remove layer.
 org.openjump.core.ui.plugin.file.open.SelectFileLoaderPanel = Select File Types
