@@ -2270,3 +2270,4 @@ ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Boun
 ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
 org.openjump.core.ui.plugin.queries.Operator.relat=\#T\:relate
 org.openjump.core.ui.plugin.queries.SimpleQuery.illegal-argument-for=\#T\:Illegal argument for ''{0}''
+org.openjump.core.ui.plugin.file.open.OpenProjectWizard.datasource-not-found=\#T\:DataSource not found for ''{0}''
