@@ -2285,3 +2285,4 @@ ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=Rectangle engloba
 ui.plugin.analysis.GeometryFunction.Minimum-Diameter=Diam\u00E8tre minimum
 org.openjump.core.ui.plugin.queries.Operator.relat=relation
 org.openjump.core.ui.plugin.queries.SimpleQuery.illegal-argument-for=Argument ill\u00E9gal pour ''{0}''
+org.openjump.core.ui.plugin.file.open.OpenProjectWizard.datasource-not-found=Source non trouv\u00E9e pour ''{0}''
